searching and sorting

--- a/10_Designing Algorithms.ipynb
+++ b/10_Designing Algorithms.ipynb
@@ -451,19 +451,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '-'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-54-ba4e4bcda1cf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'files/hopedale.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhopedale_average\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-54-ba4e4bcda1cf>\u001b[0m in \u001b[0;36mhopedale_average\u001b[0;34m(reader)\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'-'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0mtotal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtotal\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m         \u001b[0mnum\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mnum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '-'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example\n",
+      " #Comment\n",
+      " 1\n",
+      " 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Example\\n #Comment\\n 1\\n 2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
      ]
     }
    ],
@@ -472,39 +487,50 @@
     "def hopedale_average(reader:TextIO)-> int:\n",
     "    \"\"\"Go through a file and output the average value of the numerical values\n",
     "    \n",
-    "    >>> infile = StringIO('values\\\\n include\\\\n 2\\\\n 4\\\\n 7\\\\n ')\n",
+    "    >>> infile = StringIO('Example\\\\n #Comment\\\\n 1\\\\n 2 \\\\n')\n",
     "    >>> hopedale_average(infile)\n",
-    "    4\n",
+    "    1\n",
     "    \"\"\"\n",
     "    total = 0\n",
     "    num = 0\n",
-    "    header = file.readline()\n",
     "    \n",
-    "    data = file.readline() # skip any line with '#'\n",
+    "    header = file.readline()\n",
+    "    data = file.readline()\n",
     "    while data.startswith('#'):\n",
     "        data = file.readline()\n",
-    "        \n",
-    "    total += int(data) # compute the total\n",
+    "    total += int(data)\n",
     "    num += 1\n",
     "    for data in file:\n",
+    "        data = data.strip()\n",
     "        if data != '-':\n",
-    "            data = data.strip()\n",
-    "        total = total + int(data)\n",
-    "        num += 1\n",
+    "            total += int(data)\n",
+    "            num += 1\n",
     "    return int(total/num)\n",
-    "    \n",
-    "    \n",
-    "with open('files/hopedale.txt')as file:\n",
-    "    print(hopedale_average(file))"
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    with open('files/hopedale.txt')as file:\n",
+    "        print(hopedale_average(file))\n",
+    "#         testmod()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(2 + 4 + 7)/3"
+    "3/2"
    ]
   },
   {
