Object oriented programming

--- a/11_Searching and Sorting.ipynb
+++ b/11_Searching and Sorting.ipynb
@@ -11,16 +11,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Searching a list"
+    "## Linear Search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from typing import Any\n",
+    "from doctest import testmod\n",
     "def linear_search(lst:list, value:Any)-> int:\n",
     "    \"\"\"Return the index of the first occurrence of value in lst, or return -1 if value is not in lst.\n",
     "    \n",
@@ -29,82 +41,129 @@
     "    1\n",
     "    >>> linear_search([2, 4, 2], 2)\n",
     "    0\n",
-    "    >>>\n",
-    "-1\n",
-    ">>>\n",
-    "-1\n",
-    "\"\"\"\n",
+    "    >>> linear_search([2, 5, 1, -3], 4)\n",
+    "    -1\n",
+    "    >>> linear_search([], 5)\n",
+    "    \"\"\"\n",
+    "    i = 0 # indexing value\n",
+    "    \n",
+    "    while i != len(lst) and lst[i] != value :\n",
+    "        i += 1\n",
+    "    if i == len(lst): # if index is at end of list, return -1 else return index position\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return i\n",
     "\n",
-    "linear_search([2, 4, 2], 2)\n",
-    "linear_search([2, 5, 1, -3], 4)\n",
-    "linear_search([], 5)\"\"\"\n",
-    "    pass\n",
-    "\n",
-    "linear_search()"
+    "linear_search([2, 5, 1, -3], 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**********************************************************************\n",
+      "File \"__main__\", line 13, in __main__.linear_search\n",
+      "Failed example:\n",
+      "    linear_search([], 5)\n",
+      "Expected nothing\n",
+      "Got:\n",
+      "    -1\n",
+      "**********************************************************************\n",
+      "1 items had failures:\n",
+      "   1 of   4 in __main__.linear_search\n",
+      "***Test Failed*** 1 failures.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=1, attempted=8)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def index_search(lst:list, value:Any)-> int:\n",
+    "    \"\"\"Return the index of the first occurrence of value in lst, or return -1 if value is not in lst.\n",
+    "    \n",
+    "    \n",
+    "    >>> index_search([2, 5, 1, -3], 5)\n",
+    "    1\n",
+    "    >>> index_search([2, 4, 2], 2)\n",
+    "    0\n",
+    "    >>> index_search([2, 5, 1, -3], 4)\n",
+    "    -1\n",
+    "    >>> index_search([], 5)\n",
+    "    -1\n",
+    "    \"\"\"\n",
+    "    index = 0\n",
+    "    for item in lst:\n",
+    "        if item == value :\n",
+    "            return index\n",
+    "        index += 1\n",
+    "    return -1\n",
+    "index_search([2, 3, 1, 5], 4)\n",
+    "testmod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sentinel Search**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sentinel_search(lst:list, value:Any)-> int:\n",
+    "    \"\"\"Return the index of the first occurrence of value in lst, or return -1 if value is not in lst.\n",
+    "    \n",
+    "    \n",
+    "    >>> sentinel_search([2, 5, 1, -3], 5)\n",
+    "    1\n",
+    "    >>> sentinel_search([2, 4, 2], 2)\n",
+    "    0\n",
+    "    >>> sentinel_search([2, 5, 1, -3], 4)\n",
+    "    -1\n",
+    "    >>> sentinel_search([], 5)\n",
+    "    -1\n",
+    "    \"\"\"\n",
+    "    lst.append(value)\n",
+    "    index = 0\n",
+    "    while lst[index] != value:\n",
+    "        index += 1\n",
+    "    lst.pop()\n",
+    "    \n",
+    "    if index == len(lst):\n",
+    "        return -1\n",
+    "    else :\n",
+    "        return index\n",
+    "    \n",
+    "sentinel_search([2, 5, 1, -3], 4)"
+   ]
   },
   {
    "cell_type": "code",
