--- a/12_Object-Oriented Programming.ipynb
+++ b/12_Object-Oriented Programming.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {
     "hidden": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {
     "hidden": true
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {
     "hidden": true
    },
@@ -298,7 +298,7 @@
        "True"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {
     "hidden": true
    },
@@ -320,7 +320,7 @@
        "False"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {
     "hidden": true
    },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 13,
    "metadata": {
     "hidden": true
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 14,
    "metadata": {
     "hidden": true
    },
@@ -445,7 +445,7 @@
        "'Paul Gries'"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 15,
    "metadata": {
     "hidden": true
    },
@@ -468,7 +468,7 @@
        "'1234'"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 16,
    "metadata": {
     "hidden": true
    },
@@ -490,7 +490,7 @@
        "'pgries@cs.toronto.edu'"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 17,
    "metadata": {
     "hidden": true
    },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 18,
    "metadata": {
     "hidden": true
    },
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 19,
    "metadata": {
     "hidden": true
    },
@@ -546,7 +546,7 @@
        "'jacob combs'"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 20,
    "metadata": {
     "hidden": true
    },
@@ -568,7 +568,7 @@
        "'jcomb@cu.toronto.edu'"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 21,
    "metadata": {
     "hidden": true
    },
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 22,
    "metadata": {
     "hidden": true
    },
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 23,
    "metadata": {
     "hidden": true
    },
@@ -731,17 +731,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Exercises"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
-   "metadata": {},
+   "execution_count": 64,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
+    "## Exercise 1\n",
     "class Country:\n",
     "    \"\"\"Creating a country\"\"\"\n",
     "    \n",
@@ -777,22 +782,25 @@
     "        \"\"\"\n",
     "        return float(f'{self.population/self.area:.6f}')\n",
     "    \n",
-    "    def __str__(self):\n",
-    "        pass\n",
+    "    def __str__(self)->str:\n",
+    "        \"\"\"Returns readable representation string\"\"\"\n",
+    "        return f'{self.name} has a population of {self.population} and is {self.area} square km.'\n",
     "    \n",
-    "    def __repr__(self):\n",
-    "        pass\n",
+    "    def __repr__(self)-> str:\n",
+    "        return f'Country({self.name}, {self.population}, {self.area})'\n",
     "        \n",
     "        \n",
     "canada = Country('canada', 34482779, 9984670)\n",
     "mexico = Country('mexico', 34482779, 984670)\n",
-    "usa = Country('usa', 34482779, 10984670)"
+    "usa = Country('United States of America', 34482779, 10984670)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
-   "metadata": {},
+   "execution_count": 50,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -800,7 +808,7 @@
        "('canada', 34482779, 9984670)"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,8 +819,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
-   "metadata": {},
+   "execution_count": 51,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -820,7 +830,7 @@
        "True"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,8 +841,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -840,7 +852,7 @@
        "3.453572"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,106 +863,492 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'United States of America, 34482779, 10984670'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usa.__repr__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country(canada, 34482779, 9984670)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "canada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Country(canada, 34482779, 9984670)]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[canada]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise 2\n",
+    "\n",
+    "class Continent:\n",
+    "    \"\"\"Creating a continent class\"\"\"\n",
+    "    \n",
+    "    def __init__(self, name:str, countries)->None:\n",
+    "        \"\"\"A named continent with countries inside\"\"\"\n",
+    "        self.name = name\n",
+    "        self.countries = list(countries)\n",
+    "        \n",
+    "    def total_population(self)-> float:\n",
+    "        \"\"\"returns the population of people on the continent\n",
+    "        \n",
+    "        >>> canada = Country('canada', 34482779, 9984670)\n",
+    "        >>> mexico = Country('mexico', 112336538, 984670)\n",
+    "        >>> usa = Country('United States of America', 313914040, 10984670)\n",
+    "        >>> countries = [canada, mexico, usa]\n",
+    "        >>> north_america = Continent('NorthAmerica', countries)\n",
+    "        >>> north_america.total_population()\n",
+    "        460733357\n",
+    "        \"\"\" \n",
+    "        total = 0.0\n",
+    "        for country in self.countries:\n",
+    "            total += country.population\n",
+    "        return total\n",
+    "    \n",
+    "    def __str__(self)-> str:\n",
+    "        \"\"\"String representation of the class\n",
+    "        \n",
+    "        >>> canada = Country('canada', 34482779, 9984670)\n",
+    "        >>> mexico = Country('mexico', 112336538, 984670)\n",
+    "        >>> usa = Country('United States of America', 313914040, 10984670)\n",
+    "        >>> countries = [canada, mexico, usa]\n",
+    "        >>> north_america = Continent('NorthAmerica', countries)\n",
+    "        >>> str(north_america)\n",
+    "        'North America\\\\n\n",
+    "        Canada has a population of 34482779 and is 9984670 square km.\\\\n\n",
+    "        United States of America has a population of 313914040 and is 9826675\n",
+    "        square km.\\\\n\n",
+    "        Mexico has a population of 112336538 and is 1943950 square km.'\\\\n\n",
+    "        \"\"\"        \n",
+    "        res = self.name\n",
+    "        for country in self.countries:\n",
+    "            res += '\\n' + country.__str__()\n",
+    "            \n",
+    "        return res   \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "canada = Country('canada', 34482779, 9984670)\n",
+    "mexico = Country('mexico', 313914040, 984670)\n",
+    "usa = Country('United States of America', 112336538, 10984670)\n",
+    "countries = [canada, mexico, usa]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "north_america = Continent('NorthAmerica', countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34482779"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "canada.population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "canada has a population of 34482779 and is 9984670 square km.\n",
+      "mexico has a population of 313914040 and is 984670 square km.\n",
+      "United States of America has a population of 112336538 and is 10984670 square km.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for country in north_america.countries:\n",
+    "    print(country)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "460733357.0"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "north_america.total_population()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NorthAmerica\n",
+      "canada has a population of 34482779 and is 9984670 square km.\n",
+      "mexico has a population of 313914040 and is 984670 square km.\n",
+      "United States of America has a population of 112336538 and is 10984670 square km.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(north_america)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 4\n",
+    "class Nematode:\n",
+    "    \"\"\"Creating the nematode object\"\"\"\n",
+    "    def __init__(self, body_length:float,  age:int, gender:str ='male')->None:\n",
+    "        self.body_length = body_length\n",
+    "        self.gender = gender\n",
+    "        self.age = age\n",
+    "nematode = Nematode(12.3, 12, 'hermaphrodite')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hermaphrodite'"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nematode.gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nematode.age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.3"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nematode.body_length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "# Exercise 5\n",
+    "import math\n",
+    "class Points:\n",
+    "    \"\"\"Points object\"\"\"\n",
+    "    \n",
+    "    def __init__(self, x:float, y:float)-> None: \n",
+    "        \"\"\"A new Point at position (point1, point2).\n",
+    "        >>> p1 = Points(2, 3)\n",
+    "        >>> p1.y\n",
+    "        3\n",
+    "        >>> p1.x\n",
+    "        2\n",
+    "        >>> p2 = Points(4, 5)\n",
+    "        >>> p2.x\n",
+    "        4\n",
+    "        \"\"\"\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        \n",
+    "class LineSegment:\n",
+    "    \"\"\"A line segment class\"\"\"\n",
+    "    \n",
+    "    def __init__(self, point_1:Points, point_2:Points)-> Points:\n",
+    "        \"\"\" new Points on a segment\n",
+    "        \n",
+    "        >>> p1 = Points(2, 3)\n",
+    "        >>> p2 = Point(4, 5)\n",
+    "        >>> new_seg = LineSegment(p1, p2)\n",
+    "        >>> new_seg.p1\n",
+    "        (2, 3)        \n",
+    "        \"\"\"\n",
+    "        self.point_1 = point_1\n",
+    "        self.point_2 = point_2\n",
+    "        \n",
+    "    def slope(self)-> float:\n",
+    "        \"\"\"Calculates the slope of two positions\n",
+    "        \n",
+    "        >>> p1 = Points(2, 3)\n",
+    "        >>> p2 = Points(4, 5)\n",
+    "        >>> new_seg = LineSegment(p1, p2)\n",
+    "        new_seg.slope()\n",
+    "        1        \n",
+    "        \"\"\"\n",
+    "        slope = (self.point_2.y - self.point_1.y) / (self.point_2.x - self.point_1.x)\n",
+    "        return float(slope)\n",
+    "    \n",
+    "    def length(self)-> float:\n",
+    "        \"\"\"Compute the length of a segment from it's points\n",
+    "        \n",
+    "        >>> p1 = Points(2, 3)\n",
+    "        >>> p2 = Points(4, 5)\n",
+    "        >>> new_seg = LineSegment(p1, p2)\n",
+    "        >>> new_seg.length()\n",
+    "        2.8284271247461903\n",
+    "        \"\"\"\n",
+    "        length = math.sqrt(self.point_2.x - self.point_1.x) + math.sqrt(self.point_2.y - self.point_1.y)\n",
+    "        return length\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "p1 = Points(2, 3)\n",
+    "p2 = Points(4, 5)\n",
+    "seg = LineSegment(p1, p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seg.point_1.x, seg.point_1.y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seg.point_2.y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 302,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seg.slope()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.8284271247461903"
+      ]
+     },
+     "execution_count": 305,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seg.length()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
